<resources>
    <string name="app_name">Project1</string>
    <string name="krishna_fertilizers">Krishna Fertilizers</string>
    <string name="jecrc_university_image">Jecrc University Image</string>
    <string name="jecrc_university">Jecrc University</string>
    <string name="Address">JECRC University Campus: Plot No.IS-2036 to 2039, Ramchandrapura Industrial Area, Vidhani, Sitapura Extension, Jaipur - 303905 Rajasthan, India</string>
    <string name="courses_offered">Courses Offered:</string>
    <string name="faculty_of_enginnering">Faculty of Enginnering:</string>
    <string name="b_tech_cse_civil_ece_ee_mech"><![CDATA[> B.Tech. (CSE, Civil, ECE, EE, Mech.)]]></string>
    <string name="b_tech_lateral_entry"><![CDATA[> B. Tech. - Lateral Entry]]></string>
    <string name="b_tech_cse_devops_automation_and_cloud_computing_xebia"><![CDATA[> B.Tech. (CSE) DevOps Automation and Cloud Computing (Xebia)]]></string>
    <string name="b_tech_cse_artificial_intelligence_and_machine_learning_xebia"><![CDATA[> B.Tech. (CSE) Artificial Intelligence and Machine Learning (Xebia)]]></string>
    <string name="b_tech_cse_big_data_and_data_analytics_xebia"><![CDATA[> B.Tech. (CSE) Big Data and Data Analytics (Xebia)]]></string>
    <string name="b_tech_cse_artificial_intelligence_and_machine_learning_samatrix_io"><![CDATA[> B.Tech. (CSE) Artificial Intelligence and Machine Learning (Samatrix.io)]]></string>
    <string name="b_tech_cse_data_science_and_data_analytics_samatrix_io"><![CDATA[> B.Tech. (CSE) Data Science and Data Analytics (Samatrix.io)]]></string>
    <string name="b_tech_computer_science_and_business_systems_csbs_tcs"><![CDATA[> B.Tech. Computer Science and Business Systems(CSBS) (TCS)]]></string>
    <string name="b_tech_cse_artificial_intelligence_and_machine_learning_ibm"><![CDATA[> B.Tech. (CSE) Artificial Intelligence and Machine Learning (IBM)]]></string>
    <string name="b_tech_cse_internet_of_things_iot_ibm"><![CDATA[> B.Tech. (CSE) Internet of Things (IoT) (IBM)]]></string>
    <string name="b_tech_cse_big_data_and_data_analytics_ibm"><![CDATA[> B.Tech. (CSE) Big Data and Data Analytics (IBM)]]></string>
    <string name="m_tech_cse_civil_ece_ee_mech"><![CDATA[> M.Tech. (CSE, Civil, ECE, EE, Mech.)]]></string>
    <string name="jecrc_logo">JECRC logo</string>
</resources>